toolbar overflow fix

--- a/client/pages/Timesheet/ActionBar/ActionBar.module.scss
+++ b/client/pages/Timesheet/ActionBar/ActionBar.module.scss
@@ -1,3 +1,3 @@
 .root {
-    height: 45px;
+    height: auto;
 }
